manifests/personalize/personalize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personalize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personalize
  template:
    metadata:
      labels:
        app: personalize
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-personalize
        image:  rs/personalize:latest
        ports:
          - name: http
            containerPort: 6500
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        volumeMounts:
          - name: persistent-storage
            mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
