manifests/personalize/personalize-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personalize
spec:
  type: ClusterIP
  selector:
    app: personalize
  ports:
  - name: http
    port: 6500
    targetPort: 6500
